# apps/backend/src/modules/challenge/presentation/challenge-member.dto.ts
@@ -5,3 +5,15 @@ export class ChallengeMemberAddDto {
   @IsNotEmpty({ message: 'InviteCodeが空です' })
   readonly inviteCode!: string;
 }
+
+export class ChallengeInviteCodeCreateDto {
+  @IsString({ message: 'ChallengeIdが文字列ではありません' })
+  @IsNotEmpty({ message: 'ChallengeIdが空です' })
+  readonly challengeId!: string;
+}
+
+export class ChallengeInviteCodeGetDto {
+  @IsString({ message: 'ChallengeIdが文字列ではありません' })
+  @IsNotEmpty({ message: 'ChallengeIdが空です' })
+  readonly challengeId!: string;
+}
